--- a/WeatherStationProject/Program/Program.csproj
+++ b/WeatherStationProject/Program/Program.csproj
@@ -47,6 +47,7 @@
     <Compile Include="interfaces\IHumidity.cs" />
     <Compile Include="interfaces\IPressure.cs" />
     <Compile Include="interfaces\ITemperature.cs" />
+    <Compile Include="Measurement.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sensors\HumiditySensor.cs" />
