Changes: Changed enum to seperate classes Added: OnMeasurementRegistered Event added to sensor

--- a/WeatherStationProject/Program/Program.csproj
+++ b/WeatherStationProject/Program/Program.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="enums\DegreeScale.cs" />
+    <Compile Include="enums\SensorType.cs" />
     <Compile Include="interfaces\IHumidity.cs" />
     <Compile Include="interfaces\IPressure.cs" />
     <Compile Include="interfaces\ITemperature.cs" />
